--- a/arch/arm/configs/cyanogen_d2_defconfig
+++ b/arch/arm/configs/cyanogen_d2_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.99 Kernel Configuration
+# Linux/arm 3.4.104 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -162,6 +162,7 @@ CONFIG_SLUB=y
 # CONFIG_PROFILING is not set
 CONFIG_TRACEPOINTS=y
 CONFIG_HAVE_OPROFILE=y
+# CONFIG_KPROBES is not set
 CONFIG_JUMP_LABEL=y
 CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
@@ -173,6 +174,7 @@ CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
 CONFIG_HAVE_HW_BREAKPOINT=y
 CONFIG_HAVE_ARCH_JUMP_LABEL=y
+CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
 
 #
 # GCOV-based kernel profiling
@@ -182,7 +184,12 @@ CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_SLABINFO=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
-# CONFIG_MODULES is not set
+CONFIG_MODULES=y
+# CONFIG_MODULE_FORCE_LOAD is not set
+CONFIG_MODULE_UNLOAD=y
+CONFIG_MODULE_FORCE_UNLOAD=y
+# CONFIG_MODVERSIONS is not set
+# CONFIG_MODULE_SRCVERSION_ALL is not set
 CONFIG_STOP_MACHINE=y
 CONFIG_BLOCK=y
 CONFIG_LBDAF=y
@@ -1111,6 +1118,7 @@ CONFIG_XPS=y
 # CONFIG_NETPRIO_CGROUP is not set
 CONFIG_BQL=y
 CONFIG_HAVE_BPF_JIT=y
+# CONFIG_BPF_JIT is not set
 
 #
 # Network testing
@@ -1302,6 +1310,8 @@ CONFIG_INV_SENSORS_411=y
 # CONFIG_MPU_SENSORS_MPU3050_411 is not set
 # CONFIG_MPU_SENSORS_MPU6050A2_411 is not set
 CONFIG_MPU_SENSORS_MPU6050B1_411=y
+# CONFIG_MPU_SENSORS_MPU6050_SELFTEST is not set
+CONFIG_MPU_SENSORS_MPU6050_GYRO=y
 CONFIG_INV_SENSORS_ACCELEROMETERS=y
 CONFIG_MPU_SENSORS_MPU6050_ACCEL_411=y
 CONFIG_INV_SENSORS_COMPASS=y
@@ -1338,6 +1348,7 @@ CONFIG_SCSI_MULTI_LUN=y
 CONFIG_SCSI_CONSTANTS=y
 CONFIG_SCSI_LOGGING=y
 CONFIG_SCSI_SCAN_ASYNC=y
+CONFIG_SCSI_WAIT_SCAN=m
 
 #
 # SCSI Transports
@@ -1828,6 +1839,7 @@ CONFIG_I2C_QUP=y
 #
 # Other I2C/SMBus bus drivers
 #
+# CONFIG_I2C_STUB is not set
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
@@ -2197,6 +2209,7 @@ CONFIG_IR_LIRC_CODEC=y
 # CONFIG_IR_STREAMZAP is not set
 # CONFIG_RC_LOOPBACK is not set
 # CONFIG_IR_GPIO_CIR is not set
+# CONFIG_MEDIA_ATTACH is not set
 CONFIG_MEDIA_TUNER=y
 # CONFIG_MEDIA_TUNER_CUSTOMISE is not set
 CONFIG_MEDIA_TUNER_SIMPLE=y
@@ -3124,12 +3137,14 @@ CONFIG_STAGING=y
 # CONFIG_PRISM2_USB is not set
 # CONFIG_ECHO is not set
 # CONFIG_ASUS_OLED is not set
+# CONFIG_RTLLIB is not set
 # CONFIG_R8712U is not set
 # CONFIG_RTS5139 is not set
 # CONFIG_TRANZPORT is not set
 # CONFIG_LINE6_USB is not set
 # CONFIG_USB_SERIAL_QUATECH2 is not set
 # CONFIG_USB_SERIAL_QUATECH_USB2 is not set
+# CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
 CONFIG_ZRAM=y
 # CONFIG_ZRAM_DEBUG is not set
@@ -3137,6 +3152,7 @@ CONFIG_ZCACHE=y
 # CONFIG_QCACHE is not set
 CONFIG_ZSMALLOC=y
 # CONFIG_FB_SM7XX is not set
+# CONFIG_USB_ENESTORAGE is not set
 # CONFIG_BCM_WIMAX is not set
 # CONFIG_FT1000 is not set
 
@@ -3567,6 +3583,7 @@ CONFIG_CRYPTO_MANAGER_DISABLE_TESTS=y
 CONFIG_CRYPTO_WORKQUEUE=y
 # CONFIG_CRYPTO_CRYPTD is not set
 CONFIG_CRYPTO_AUTHENC=y
+# CONFIG_CRYPTO_TEST is not set
 
 #
 # Authenticated Encryption with Associated Data
