--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -80,6 +80,7 @@ obj-$(CONFIG_SEC_MISC)		+= sec_param.o sec_misc.o
 obj-$(CONFIG_ADC_STMPE811)              += stmpe811.o
 obj-$(CONFIG_MPU_411_ENABLE)	+= inv_mpu/
 obj-$(CONFIG_OPTICAL_TAOS_TRITON)		+= taos.o
+obj-$(CONFIG_SENSORS_AL3201)		+= al3201.o
 obj-$(CONFIG_SAMSUNG_JACK)		+= sec_jack.o
 obj-$(CONFIG_OPTICAL_BH1721) += bh1721.o
 obj-$(CONFIG_VP_A2220)		+= a2220.o
