[SQUASH] lz4 support
Individual commits here: https://github.com/invisiblek/android_kernel_samsung_d2/commits/lz4

5d06b23344c3dead593a49d8d8e1299fdcb33784 d2: enable lz4 compression for kernel
4bac0b571ac217f88c73440506ea1d4cf1bf72a3 lib/clz_ctz.c: add prototype declarations in lib/clz_ctz.c
083b25287ac04af9de24c2c27e46e9703e699588 lib: add weak clz/ctz functions
60f6bc9a375c878ac9253f23d94919643467f789 arm: add support for LZ4-compressed kernel
0292e1bff43edaf4d5b053b37b5136cfdc5b6406 scripts/gen_initramfs_list.sh: fix flags for initramfs LZ4 compression
e4632c94597a1f43a2daaac3f01189fb7ffdde5c initramfs: read CONFIG_RD_ variables for initramfs compression
38e3830e88c004d3634f75cebfb931858b41477b lz4: add overrun checks to lz4_uncompress_unknownoutputsize()
c55b7fb0f47802747289f5d5c21e82443726bd7f lz4: fix another possible overrun
d431537dc748a02f0c83b0fc022746df09f4c77a lz4: ensure length does not wrap
fa816c19b7040df8d5c1a926949e822e2483053b lib/decompress_unlz4.c: always set an error return code on failures
d217b853dce4840c768c4ec7de2c158ace66310e lz4: fix compression/decompression signedness mismatch
15598d02ce4a11626c06e4fdfbfc5388598f4830 lib/lz4: correct the LZ4 license
1de648a2b13bfc2a8356517de7a6a61eee9ca4d0 lib: add lz4 compressor module
9987e133b457d18b7c8e41744032e979e2851505 lib: add support for LZ4-compressed kernel
b0d8c401f678b14aa133db0bb79e33ccbae28807 decompressor: add LZ4 decompressor module

Change-Id: Idec489648b238a2fe12b66dded36cf85c18b628b

--- a/arch/arm/configs/cyanogen_d2_defconfig
+++ b/arch/arm/configs/cyanogen_d2_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.99 Kernel Configuration
+# Linux/arm 3.4.105 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -50,10 +50,12 @@ CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_XZ=y
 CONFIG_HAVE_KERNEL_LZO=y
+CONFIG_HAVE_KERNEL_LZ4=y
 # CONFIG_KERNEL_GZIP is not set
 # CONFIG_KERNEL_LZMA is not set
-CONFIG_KERNEL_XZ=y
+# CONFIG_KERNEL_XZ is not set
 # CONFIG_KERNEL_LZO is not set
+CONFIG_KERNEL_LZ4=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -121,6 +123,7 @@ CONFIG_RD_BZIP2=y
 CONFIG_RD_LZMA=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
+CONFIG_RD_LZ4=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
@@ -173,6 +176,7 @@ CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
 CONFIG_HAVE_HW_BREAKPOINT=y
 CONFIG_HAVE_ARCH_JUMP_LABEL=y
+CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
 
 #
 # GCOV-based kernel profiling
@@ -1302,6 +1306,8 @@ CONFIG_INV_SENSORS_411=y
 # CONFIG_MPU_SENSORS_MPU3050_411 is not set
 # CONFIG_MPU_SENSORS_MPU6050A2_411 is not set
 CONFIG_MPU_SENSORS_MPU6050B1_411=y
+# CONFIG_MPU_SENSORS_MPU6050_SELFTEST is not set
+CONFIG_MPU_SENSORS_MPU6050_GYRO=y
 CONFIG_INV_SENSORS_ACCELEROMETERS=y
 CONFIG_MPU_SENSORS_MPU6050_ACCEL_411=y
 CONFIG_INV_SENSORS_COMPASS=y
@@ -3677,11 +3683,13 @@ CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
 CONFIG_DECOMPRESS_GZIP=y
 CONFIG_DECOMPRESS_BZIP2=y
 CONFIG_DECOMPRESS_LZMA=y
+CONFIG_DECOMPRESS_LZ4=y
 CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_REED_SOLOMON=y
 CONFIG_REED_SOLOMON_ENC8=y
