proc: uid: Adds accounting for the cputimes per uid.
Adds proc files /proc/uid_cputime/show_uid_stat and
/proc/uid_cputime/remove_uid_range.

show_uid_stat lists the total utime and stime for the active as well as
terminated processes for each of the uids.

Writing a range of uids to remove_uid_range will delete the accounting
for all the uids within that range.

Conflicts:
	drivers/misc/Kconfig
	drivers/misc/Makefile

Change-Id: I47c540deef1d13b3a45f958ede04200e20c1c07e

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -761,6 +761,13 @@ config OPTICAL_BH1721
 	tristate "Rohm bh1721 Optical Sensor"
 	default n
 	depends on I2C
+
+config UID_CPUTIME
+	tristate "Per-UID cpu time statistics"
+	default n
+	help
+	  Per UID based cpu time statistics exported to /proc/uid_cputime
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
