proc: uid: Changes the thread notifier to profile event notifier.
In order to keep the code consistent with all other platforms, the
thread notifier is changed to profile event notifier.

Change-Id: I5b996c789927b42dacba10af6fe81a21866e2c8f

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -764,7 +764,7 @@ config OPTICAL_BH1721
 
 config UID_CPUTIME
 	tristate "Per-UID cpu time statistics"
-	default n
+	depends on PROFILING
 	help
 	  Per UID based cpu time statistics exported to /proc/uid_cputime
 
