Squashed espressovzw (Galaxy Tab 2 LTE VZW) bring up
add AL3201 light sensor driver

Change-Id: Iceead41228b71a94cf821bf1bf17854cb6829dcd

update touchscreen drivers for espressovzw

Change-Id: I34691177d9c807eb4f8f79359aa9fb6559bf6600

add yas LIS3DH driver for espressovzw

Change-Id: I6e53150de587b6379b27572f27ec90fdc79e2cf5

update sound drivers for espressovzw

Change-Id: Ic5f6563d52e90da2e02fa4fa224d07a90750c35a

update/add panel drivers for espressovzw

Change-Id: I84289ac2abf3e274c3ed9f94f1f5b7c46e02819e

update camera drivers for espressovzw

Change-Id: Ic9311fb645ecf9b1c1e440b4608c0c66017a4e7a

update charger/battery drivers for espressovzw

Change-Id: Id45ae257dbd6144f60faa744cd4877d949f832a8

add/update USB bits for espressow

- espresso tab is a uniquie USB structure in this family.
  This is functional but is far from complete, additional
  work is needed to bring up full USB functionality.

Change-Id: I4fb1644ec31d99e9401111d8ba429e4b58ec0fde

block espressovzw from mhl

Change-Id: Ib5796e08c2866877a6f74607536552111abd85d0

espressovzw: add/enable IRDA_MC96 driver and enable IR decoders

Change-Id: I6fe8a5733964c149cc7d43a5794c169d77081919

Espressovzw: board files and updates to common board files

Change-Id: I2d6d39535ef60074964c341a2dc1422d5280bc39

espressovzw defconfig

Change-Id: I1e263617d6d14c3bc39970b46120a37d794fa939

--- a/drivers/media/video/Makefile
+++ b/drivers/media/video/Makefile
@@ -216,6 +216,8 @@ obj-$(CONFIG_MSM_CAMERA) += msm_zsl/
 else
 ifeq ($(CONFIG_ISX012),y)
 obj-$(CONFIG_MSM_CAMERA) += msm_apexq/
+else ifeq ($(CONFIG_S5K5CCGX),y)
+obj-$(CONFIG_MSM_CAMERA) += msm_apexq/
 else
 obj-$(CONFIG_MSM_CAMERA) += msm/
 endif
