d2: regen defconfig, enable uid cputime
Change-Id: I818bd17ba65f1cfbc59af67d2378958a4ff785b7

--- a/arch/arm/configs/cyanogen_d2_defconfig
+++ b/arch/arm/configs/cyanogen_d2_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.108 Kernel Configuration
+# Linux/arm 3.4.109 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -159,8 +159,9 @@ CONFIG_COMPAT_BRK=y
 # CONFIG_SLAB is not set
 CONFIG_SLUB=y
 # CONFIG_SLOB is not set
-# CONFIG_PROFILING is not set
+CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
+# CONFIG_OPROFILE is not set
 CONFIG_HAVE_OPROFILE=y
 CONFIG_JUMP_LABEL=y
 CONFIG_HAVE_KPROBES=y
@@ -373,6 +374,7 @@ CONFIG_MSM_REMOTE_SPINLOCK_SFPB=y
 CONFIG_MACH_M2=y
 # CONFIG_MACH_M2_DCM is not set
 # CONFIG_MACH_APEXQ is not set
+# CONFIG_MACH_COMANCHE is not set
 # CONFIG_MACH_EXPRESS is not set
 # CONFIG_MACH_ESPRESSO_VZW is not set
 
@@ -1313,6 +1315,7 @@ CONFIG_VP_A2220=y
 CONFIG_SAMSUNG_JACK=y
 # CONFIG_SAMSUNG_JACK_GNDLDET is not set
 # CONFIG_OPTICAL_BH1721 is not set
+CONFIG_UID_CPUTIME=y
 # CONFIG_C2PORT is not set
 
 #
